<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".SignUpActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/voilet_700"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="35dp"
            android:orientation="vertical">

            <ImageButton
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:layout_marginStart="25dp"
                android:layout_marginTop="25dp"
                android:background="@drawable/round_shape_white_bg"
                android:onClick="goBack"
                android:src="@drawable/back_arrow_icon"
                android:textSize="30sp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_margin="5dp"
                android:fontFamily="@font/poppins_bold"
                android:text="@string/fill_your_details"
                android:textAlignment="center"
                android:textColor="@color/white"
                android:textSize="25sp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:fontFamily="@font/poppins_regular"
                android:text="@string/one_step_away_to_start_the_journey"
                android:textAlignment="center"
                android:textColor="@color/white"
                android:textSize="14sp" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/top_curve_white_bg"
            android:orientation="vertical"
            android:padding="20dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="left"
                android:layout_marginTop="15dp"
                android:fontFamily="@font/poppins_semi_bold"
                android:text="@string/sign_up"
                android:textColor="@color/voilet_700"
                android:textSize="22sp" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:layout_marginTop="5dp"
                android:layout_marginEnd="10dp"
                android:orientation="vertical">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/poppins_semi_bold"
                    android:text="@string/full_name"
                    android:textColor="#777777"
                    android:textSize="14sp" />

                <EditText
                    android:id="@+id/etFullName"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="4dp"
                    android:background="@drawable/gray_border_bg"
                    android:fontFamily="@font/poppins_semi_bold"
                    android:hint="@string/e_g_tony_stark"
                    android:inputType="textPersonName"
                    android:padding="10dp"
                    android:textColor="@color/gray_500"
                    android:textColorHint="@color/gray_700"
                    android:textSize="14sp" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:layout_marginTop="5dp"
                android:layout_marginEnd="10dp"
                android:orientation="vertical">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/poppins_semi_bold"
                    android:text="@string/mobile_number"
                    android:textColor="#777777"
                    android:textSize="14sp" />

                <EditText
                    android:id="@+id/etMobileNum"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="4dp"
                    android:background="@drawable/gray_border_bg"
                    android:fontFamily="@font/poppins_semi_bold"
                    android:hint="@string/e_g_9876543210"
                    android:inputType="phone|number"
                    android:padding="10dp"
                    android:textColor="@color/gray_500"
                    android:textColorHint="@color/gray_700"
                    android:textSize="14sp" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:layout_marginTop="5dp"
                android:layout_marginEnd="10dp"
                android:orientation="vertical">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/poppins_semi_bold"
                    android:text="@string/your_email"
                    android:textColor="#777777"
                    android:textSize="14sp" />

                <EditText
                    android:id="@+id/etEmail"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="4dp"
                    android:background="@drawable/gray_border_bg"
                    android:fontFamily="@font/poppins_semi_bold"
                    android:hint="@string/e_g_secure_entry_se_com"
                    android:inputType="textEmailAddress"
                    android:padding="10dp"
                    android:textColor="@color/gray_500"
                    android:textColorHint="@color/gray_700"
                    android:textSize="14sp" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:layout_marginTop="5dp"
                android:layout_marginEnd="10dp"
                android:orientation="vertical">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/poppins_semi_bold"
                    android:text="Username"
                    android:textColor="#777777"
                    android:textSize="14sp" />

                <EditText
                    android:id="@+id/etUsername"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="4dp"
                    android:background="@drawable/gray_border_bg"
                    android:fontFamily="@font/poppins_semi_bold"
                    android:hint="e.g. dark2800"
                    android:inputType="textEmailAddress"
                    android:padding="10dp"
                    android:textColor="@color/gray_500"
                    android:textColorHint="@color/gray_700"
                    android:textSize="14sp" />

            </LinearLayout>

            <LinearLayout
                android:id="@+id/secretCodeLayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:layout_marginTop="5dp"
                android:layout_marginEnd="10dp"
                android:orientation="vertical">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/poppins_semi_bold"
                    android:text="Sociery Secret Code"
                    android:textColor="#777777"
                    android:textSize="14sp" />

                <EditText
                    android:id="@+id/etSocietySecretCode"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="4dp"
                    android:background="@drawable/gray_border_bg"
                    android:fontFamily="@font/poppins_semi_bold"
                    android:hint="e.g. secteniop9870"
                    android:inputType="text"
                    android:padding="10dp"
                    android:textColor="@color/gray_500"
                    android:textColorHint="@color/gray_700"
                    android:textSize="14sp" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:layout_marginTop="5dp"
                android:layout_marginEnd="10dp"
                android:orientation="vertical">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/poppins_semi_bold"
                    android:text="Password"
                    android:textColor="#777777"
                    android:textSize="14sp" />

                <EditText
                    android:id="@+id/etPassword"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="4dp"
                    android:background="@drawable/gray_border_bg"
                    android:fontFamily="@font/poppins_semi_bold"
                    android:hint="********"
                    android:inputType="textPassword"
                    android:padding="10dp"
                    android:textColor="@color/gray_500"
                    android:textColorHint="@color/gray_700"
                    android:textSize="14sp" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:layout_marginTop="5dp"
                android:layout_marginEnd="10dp"
                android:orientation="vertical">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/poppins_semi_bold"
                    android:text="Confirm Password"
                    android:textColor="#777777"
                    android:textSize="14sp" />

                <EditText
                    android:id="@+id/etConfirmPassword"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="4dp"
                    android:background="@drawable/gray_border_bg"
                    android:fontFamily="@font/poppins_semi_bold"
                    android:hint="********"
                    android:inputType="textPassword"
                    android:padding="10dp"
                    android:textColor="@color/gray_500"
                    android:textColorHint="@color/gray_700"
                    android:textSize="14sp" />

            </LinearLayout>

            <Button
                android:id="@+id/continueSignUpBtn"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:layout_marginTop="30dp"
                android:layout_marginEnd="10dp"
                android:background="@drawable/voilet_bg_curve"
                android:fontFamily="@font/poppins_medium"
                android:padding="5dp"
                android:text="Continue"
                android:textAllCaps="false"
                android:textColor="@color/white"
                android:textSize="16sp"
                android:textStyle="bold" />

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_margin="30dp"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="2dp"
                    android:fontFamily="@font/poppins_semi_bold"
                    android:text="Already have an account?"
                    android:textColor="#444444"
                    android:textSize="12sp" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="2dp"
                    android:fontFamily="@font/poppins_bold"
                    android:onClick="backToLoginPage"
                    android:text="Sign In"
                    android:textColor="@color/voilet_500"
                    android:textSize="12sp" />

            </LinearLayout>

        </LinearLayout>
    </LinearLayout>

</ScrollView>